deviseのインストール,ログイン機能の実装,homeのviewの作成

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,18 @@
  *= require_tree .
  *= require_self
  */
+@import 'bulma';
+@import 'bulma-extensions';
+.navbar {
+  background-color: rgb(3, 11, 118);
+  position: fixed;
+  width: 100%;
+}
+.navbar-item {
+  color: white;
+  font-size: 30px;
+}
+.button {
+  background-color: rgb(3, 11, 118);
+  color: white;
+}
