user周りの作成,homeレイアウト調整,エラーメッセージの日本語化

--- a/app/views/devise/shared/_footer.html.erb
+++ b/app/views/devise/shared/_footer.html.erb
@@ -1,4 +1,12 @@
 <footer>
+  <div class="footer_fixed_btn">
+    <% if user_signed_in? %>
+    <% else %>
+      <%= link_to  users_guest_sign_in_path, class: "button is-info ", method: :post do %>
+        ゲストログインはこちら！！<br>まずは機能をお試し！
+      <% end %>
+    <% end %>
+  </div>
   <div class="container">
     <p>© 2023 Yui Horinouchi</p>
   </div>
