--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -20,7 +20,7 @@
 .firstView-title {
   margin-top: 80px;
   font-size: 65px;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family: monospace;
   font-weight: bold;
   text-align: center;
 }
