--- a/app/views/devise/shared/_header.html.erb
+++ b/app/views/devise/shared/_header.html.erb
@@ -1,39 +1,34 @@
 <nav class="navbar">
-  <div class="navbar-brand">
+  <div class="navbar-left">
   <%= link_to root_path, class: "navbar-item" do %>
-    <h1>TOPへ</h1>
+    <%= image_tag "logo.png"%><span class="top-logo">貯金簿</span>
   <% end %>
   </div>
-  <% if user_signed_in? %>
-      <div id="navbarExampleTransparentExample" class="navbar-menu">
-        <div class="navbar-end">
-          <div class="navbar-item">
-            <div class="field is-grouped">
-              <p class="control">
-              <%= link_to "ログアウト", destroy_user_session_path, class: "button", method: :delete %>
-              <%# <%= render '/devise/shared/dropdown' %> 
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    <% else %>
-      <div id="navbarExampleTransparentExample" class="navbar-menu">
-        <div class="navbar-end">
-          <div class="navbar-item">
-            <div class="field is-grouped">
-              <p class="control">
-                <%= link_to "ログイン", new_user_session_path, class: "button is-warning is-light" %>
-              </p>
-              <p class="control">
-                <%= link_to 'ゲストログイン（閲覧用）', users_guest_sign_in_path, class: "button is-warning is-light", method: :post %>
-              </p>
-              <p class="control">
-                <%= link_to "新規登録", new_user_registration_path, class: "button is-warning is-light" %>
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    <% end %>
+  <div class="navbar-right">
+    <%= render 'devise/shared/dropdown' %>
+  </div>
 </nav>
+<%= render '/devise/shared/notification' %>
+<script type="text/javascript">
+  document.addEventListener('DOMContentLoaded', () => {
+
+    // Get all "navbar-burger" elements
+    const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
+
+    // Add a click event on each of them
+    $navbarBurgers.forEach( el => {
+      el.addEventListener('click', () => {
+
+        // Get the target from the "data-target" attribute
+        const target = el.dataset.target;
+        const $target = document.getElementById(target);
+
+        // Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
+        el.classList.toggle('is-active');
+        $target.classList.toggle('is-active');
+
+      });
+    });
+
+  });
+</script>
