--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,19 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<div class="user-edit">
+  <div class="container">
+    <%= form_with model: @user,local: true do |f| %>
+    <%= render 'devise/shared/error_messages', resource: @user %>
+    <div class="field">
+      <%= f.label "ユーザー名", class: "label" %>
+      <%= f.text_field :username, class: "input" %>
+    </div>
+    <div class="field">
+      <%= f.label :savings_target, "目標貯金額", class: "label" %>
+      <%= f.text_field :savings_target, class: "input" %>
+    </div>
+    <div class="field">
+      <%= f.submit "更新", class: "button is-success" %>
+      <%= link_to "戻る", :back, class: "button is-light" %>
+    </div>
+    <% end %>
+  </div>
+</div>
