--- a/app/views/devise/shared/_dropdown.html.erb
+++ b/app/views/devise/shared/_dropdown.html.erb
@@ -14,6 +14,9 @@
         <%= link_to "アカウント情報", user_path(current_user.id), class:"button is-white" %>
       </li>
       <li class="dropdown_item">
+        <%= link_to "資産一覧", locations_path, class:"button is-white" %>
+      </li>
+      <li class="dropdown_item">
         <%= link_to "退会", user_path(current_user.id), class:"button is-white", 
           method: :delete, data: {confirm: "本当に削除しますか？"} %>
       </li>
