--- a/app/views/devise/shared/_header.html.erb
+++ b/app/views/devise/shared/_header.html.erb
@@ -1,7 +1,8 @@
 <nav class="navbar">
   <div class="navbar-left">
   <%= link_to root_path, class: "navbar-item" do %>
-    <%= image_tag "logo.png"%><span class="top-logo">貯金簿</span>
+    <%= image_tag "logo.png", class: "top-logoImage" %>
+    <span class="top-logo">貯金簿</span>
   <% end %>
   </div>
   <div class="navbar-right">
