income,expense周りの作成,検索機能の追加,レイアウト微調整

--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="location-container">
     <%= form_with model: @location, local: true do |f| %>
+      <%= render 'devise/shared/error_messages', resource: @location %>
       <div class="field">
         <%= f.label :asset_name, "資産名"%>
         <%= f.text_field :asset_name, class: "input"%>
