--- a/app/views/devise/shared/_dropdown.html.erb
+++ b/app/views/devise/shared/_dropdown.html.erb
@@ -32,14 +32,12 @@
   </div>
 </div>
 <script type="text/javascript">
-  (function () {
-    document.addEventListener('DOMContentLoaded', function() { // HTML解析が終わったら
-      const btn = document.getElementById('dropdown_btn'); // ボタンをidで取得
-      if(btn) { // ボタンが存在しないときにエラーになるのを回避
-        btn.addEventListener('click', function(){ //ボタンがクリックされたら
-          this.classList.toggle('is-open'); // is-openを付加する
-        });
-      }
+  document.addEventListener('DOMContentLoaded', function() {
+  const btn = document.getElementById('dropdown_btn');
+  if (btn) {
+    btn.addEventListener('click', function() {
+      this.classList.toggle('is-open');
     });
-  }());
+  }
+  });
 </script>
