--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,5 +1,6 @@
-<div class="container">
-  <div class="location-container">
+<div class="location-container">
+  <%= render 'devise/shared/search_form' %>
+  <div class="container">
     <div class="location-header">
       <h1>資産一覧</h1>
       <%= link_to new_location_path do %>
@@ -11,26 +12,28 @@
         <tbody>
           <tr>
             <td>
-              <div class="location-items">
-                <div class="location-item">
-                  <% if location.location_name == "現金" %>
-                    <%= image_tag "cash.png", size: "50x50" %>
-                  <% elsif location.location_name == "銀行口座" %>
-                    <%= image_tag "bank_image.png", size: "50x50" %>
-                  <% elsif location.location_name == "クレジットカード" %>
-                    <%= image_tag "credit-card.png", size: "50x50" %>
-                  <% elsif location.location_name == "証券口座" %>
-                    <%= image_tag "investment.png", size: "50x50" %>
-                  <% elsif location.location_name == "電子マネー" %>
-                    <%= image_tag "electoric-money.png", size: "50x50" %>
-                  <% else %>
-                    <%= image_tag "other-money.png", size: "50x50" %>
-                  <% end %>
+              <%= link_to location_incomes_path(location.id) do %>
+                <div class="location-items">
+                  <div class="location-item">
+                    <% if location.location_name == "現金" %>
+                      <%= image_tag "cash.png", size: "50x50" %>
+                    <% elsif location.location_name == "銀行口座" %>
+                      <%= image_tag "bank_image.png", size: "50x50" %>
+                    <% elsif location.location_name == "クレジットカード" %>
+                      <%= image_tag "credit-card.png", size: "50x50" %>
+                    <% elsif location.location_name == "証券口座" %>
+                      <%= image_tag "investment.png", size: "50x50" %>
+                    <% elsif location.location_name == "電子マネー" %>
+                      <%= image_tag "electoric-money.png", size: "50x50" %>
+                    <% else %>
+                      <%= image_tag "other-money.png", size: "50x50" %>
+                    <% end %>
+                  </div>
+                  <div class="location-item">
+                    <%= location.location_name %>
+                  </div>
                 </div>
-                <div class="location-item">
-                  <%= location.location_name %>
-                </div>
-              </div>
+              <% end %>
             </td>
             <td><%= location.asset_name %></td>
             <td>
@@ -39,7 +42,13 @@
               <% end %>
             </td>
             <td>
-              収支入力
+              <%= link_to "入金", new_location_income_path(location.id) %>
+            </td>
+            <td>
+              <%= link_to "出金", new_location_expense_path(location.id) %>
+            </td>
+            <td>
+              残高: <%= number_to_currency(location.balance_money) %>
             </td>
           </tr>
         </tbody>
@@ -47,4 +56,3 @@
     <% end %>
   </div>
 </div>
-
