dashboardの作成,収入、支出のdestroy実装,レイアウト調整

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,7 +49,9 @@ body {
 .navbar-item {
   color: white;
   font-size: 30px;
-  font-family: fantasy;
+}
+.modal-card-foot {
+  margin-top: 0;
 }
 .top-logo {
   margin-left: 10px;
