--- a/app/views/devise/shared/_notification.html.erb
+++ b/app/views/devise/shared/_notification.html.erb
@@ -8,3 +8,9 @@
     <p class="alert"><%= alert %></p>
   </div>
 <% end %>
+<% if flash[:warn] %>
+  <div class="notification">
+    <p class="warn"><%= warn %></p>
+  </div>
+<% end %>
+
