--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -24,8 +24,8 @@
         </div>
         <div class="description">
           <h3>2. お金の使いすぎを防止してくれる</h3>
-          <p>各カテゴリー毎に自分で使って良い金額を設定できます。
-          例えば食費を3万円として設定してその金額に近くなると、お知らせしてくれます。</p>
+          <p>お金の管理場所毎に自分で使って良い金額を設定できます。
+          例えばクレジットカードの上限金額を3万円として設定してその金額に近くなると、お知らせしてくれます。</p>
         </div>
         <div class="description">
           <h3>3. 種類別にお金の管理ができる</h3>
