--- a/app/views/incomes/show.html.erb
+++ b/app/views/incomes/show.html.erb
@@ -1,29 +1,38 @@
-<h1>Incomes#show</h1>
-<p>Find me in app/views/incomes/show.html.erb</p>
+<% provide(:title, @income.income_name) %>
 <div class="incomes-form">
   <div class="container">
-    <table class="table is-fullwidth is-hoverable" >
+    <table class="table is-fullwidth is-hoverable">
       <tbody>
         <tr>
-          <td>
+          <td colspan="2">
             <%= render 'devise/shared/location_items', location_name: @location.location_name %>
           </td>
-          <td><%= @income.income_day %></td>
-          <td>
-            <%= @income.income_name %>
-          </td>
-          <td>
+        </tr>
+        <tr>
+          <td><%= l @income.income_day, formats: :short %></td>
+          <td><%= @income.income_name %></td>
+        </tr>
+        <tr>
+          <td colspan="2">
             <% if @income.income_money.present? %>
               <%= "#{@income.income_money.to_s(:delimited)}円" %>
             <% end %>
           </td>
-          <td><%= @income.income_memo %></td>
-          <td><%= @income.created_at.strftime("%Y年%-m月%-d日 %-H時%-M分") %></td>
+        </tr>
+        <tr>
+          <td colspan="2"><%= @income.income_memo %></td>
+        </tr>
+        <tr>
+          <td><%= l @income.created_at %></td>
+          <td></td>
+        </tr>
+        <tr>
           <td>
             <%= link_to edit_location_income_path(@location, @income) do %>
               編集
             <% end %>
           </td>
+          <td></td>
         </tr>
       </tbody>
     </table>
