--- a/app/views/incomes/index.html.erb
+++ b/app/views/incomes/index.html.erb
@@ -1,7 +1,14 @@
+<% provide(:title, "#{@location.location_name}のincome") %>
 <div class="incomes-form">
   <div class="container">
     <div class="income-header">
-      <h1>入金記録一覧</h1>
+      <h1>
+        <% if @location.asset_name.present? %>
+          <%= "#{@location.asset_name}(#{@location.location_name})の入金記録一覧" %>
+        <% else %>
+          <%= "#{@location.location_name} 入金記録一覧" %>
+        <% end %>
+      </h1>
       <%= link_to new_location_income_path do %>
         <i class="fa fa-plus-circle">新規作成</i>
       <% end %>
@@ -10,7 +17,7 @@
       <table class="table is-fullwidth is-hoverable" >
         <tbody>
           <tr>
-            <td><%= income.income_day %></td>
+            <td><%= l income.income_day, formats: :short %></td>
             <td>
               <%= link_to location_income_path(@location, income) do %>
                 <%= income.income_name %>
@@ -27,10 +34,21 @@
                 編集
               <% end %>
             </td>
+            <td>
+              <%= link_to "削除", location_income_path(@location, income), method: :delete, data: {confirm: "この操作は取り消しできません。本当に削除しますか？"} %>
+            </td>
           </tr>
         </tbody>
       </table>
     <% end %>
-    <%= link_to "出金記録一覧へ", location_expenses_path, class: "button is-light is-info" %>
+    <% if @location.asset_name.present? %>
+      <%= link_to "#{@location.asset_name}(#{@location.location_name})の出金記録一覧へ", location_expenses_path, class: "button is-light is-info" %>
+    <% else %>
+      <%= link_to "#{@location.location_name}の出金記録一覧へ", location_expenses_path, class: "button is-light is-info" %>
+    <% end %>
+    <%=  link_to "#{@location.location_name}の月グラフへ", monthly_incomes_location_incomes_path, class: "button is-light is-info"  %>
+    <div class="graph-container">
+      <%= pie_chart @incomes.group(:income_name).count %>
+    </div>
   </div>
 </div>
