--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -1,5 +1,4 @@
-<h1>Searches#index</h1>
-<p>Find me in app/views/searches/index.html.erb</p>
+<% provide(:title, "検索結果") %>
 <div class="searches-container">
   <%= render 'devise/shared/search_form'%>
   <div class="container">
@@ -13,9 +12,6 @@
         <table class="table is-fullwidth is-hoverable" >
           <tbody>
             <tr>
-                <td>
-                  <%# <% income.location_name %> %>
-                </td>
               <td><%= income.income_day %></td>
               <td>
                 <%= link_to income.income_name, location_income_path(income.location, income) %>
