--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,11 +3,11 @@
     <%= form_with model: @user,local: true do |f| %>
     <%= render 'devise/shared/error_messages', resource: @user %>
     <div class="field">
-      <%= f.label "ユーザー名", class: "label" %>
+      <%= f.label :username, class: "label" %>
       <%= f.text_field :username, class: "input" %>
     </div>
     <div class="field">
-      <%= f.label :savings_target, "目標貯金額", class: "label" %>
+      <%= f.label :savings_target, class: "label" %>
       <%= f.text_field :savings_target, class: "input" %>
     </div>
     <div class="field">
