--- a/app/views/users/personal_information_edit.html.erb
+++ b/app/views/users/personal_information_edit.html.erb
@@ -3,7 +3,7 @@
     <%= form_with model: @user,local: true do |f| %>
       <%= render 'devise/shared/error_messages', resource: @user %>
       <div class="field">
-        <%= f.label :email, "メールアドレス", class: "label" %>
+        <%= f.label :email, class: "label" %>
         <%= f.text_field :email, class: "input" %>
       </div>
       <%= f.hidden_field :reset_password_token %>
