--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -7,3 +7,14 @@
 .user-edit {
   padding-top: 100px;
 }
+.page-description {
+  background-color: lightgray;
+  margin-bottom: 30px;
+  padding: 20px;
+}
+.table.is-fullwidth {
+  margin-top: 20px;
+}
+.account-information h1 {
+  font-size: 20px;
+}
