--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
     </h1>
     <div class="firstView-content">
       <%= image_tag "logo3.png", class:"firstView-image" %>
-      <%= image_tag "logo.png" %>
+      <%= image_tag "logo.png", class:"firstView-mainImage" %>
       <%= image_tag "logo2.png", class:"firstView-image" %>
     </div>
   </div>
@@ -30,8 +30,7 @@
         <div class="description">
           <h3>3. 種類別にお金の管理ができる</h3>
           <p>現金、クレジットカード、口座引き落とし、証券口座、電子マネーなど種類別に入力して管理することができます。
-          今の時代、何枚ものクレジットカード、沢山の電子マネーが溢れています。
-          何で支払いをして何を買ったか、しっかり管理したい方におすすめです！</p>
+          それぞれ種類別に管理したい方におすすめです。</p>
         </div>
       </div>
     </div>
