--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,9 @@
 <div class="account-information">
+  <div class="page-description">
+    ここでは自身のアカウント情報の編集ができます。プロフィールの更新を押すと名前と目標貯金額
+    の設定ができます。<br>アカウントの編集を押すとメールアドレスとパスワードの編集ができます。
+  </div>
   <div class="container">
-    <div class="page-description">
-      ここでは自身のアカウント情報の編集ができます。プロフィールの更新を押すと名前と目標貯金額
-      の設定ができます。アカウントの編集を押すとメールアドレスとパスワードの編集ができます。
-    </div>
     <h1>設定</h1>
     <table class="table is-fullwidth" >
       <tbody>
