--- a/app/assets/stylesheets/dashboards.scss
+++ b/app/assets/stylesheets/dashboards.scss
@@ -2,7 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 .dashBoard-container {
-  padding-top: 100px;
+  padding-top: 50px;
+}
+.dashBoard-container p {
+  font-size: 20px;
 }
 .dashBoard-header {
   display: flex;
