--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -18,3 +18,11 @@
 .account-information h1 {
   font-size: 20px;
 }
+.button.is-info {
+  padding: 20px;
+  border-radius: 5px;
+  margin-right: 20px;
+}
+.button-container {
+  display: flex;
+}
