--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -31,7 +31,7 @@
         </tr>
       </tbody>
     </table>
-    <div>
+    <div class="button-container">
       <%= link_to "プロフィールの編集", edit_user_path, class: "button is-info is-light" %>
       <%= link_to "アカウントの編集", user_personal_information_edit_path, class: "button is-info is-light" %>
     </div>
