--- a/app/views/incomes/new.html.erb
+++ b/app/views/incomes/new.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "入金作成") %>
 <div class="incomes-form">
   <div class="container">
     <%= form_with model: [@location, @income], local: true do |f| %>
