--- a/app/views/locations/edit.html.erb
+++ b/app/views/locations/edit.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "#{@location.asset_name}の編集") %>
 <div class="container">
   <div class="location-container">
     <%= form_with model: @location, local: true do |f| %>
