--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "Locations") %>
+<% provide(:title, "資産一覧") %>
 <div class="location-container">
   <%= render 'devise/shared/search_form' %>
   <div class="container">
