--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "資産新規作成") %>
 <div class="container">
   <div class="location-container">
     <%= form_with model: @location, local: true do |f| %>
