--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "#{@user.username}さんの情報") %>
 <div class="account-information">
   <div class="page-description">
     ここでは自身のアカウント情報の編集ができます。プロフィールの更新を押すと名前と目標貯金額
