--- a/app/views/expenses/edit.html.erb
+++ b/app/views/expenses/edit.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "#{@expense.expense_name}の編集") %>
 <div class="expenses-form">
   <div class="container">
     <%= form_with model: [@location, @expense], local: true do |f| %>
