--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "#{@user.username}さんの編集") %>
 <div class="user-edit">
   <div class="container">
     <%= form_with model: @user,local: true do |f| %>
