--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -44,7 +44,7 @@
     <%= link_to "#{@location.asset_name}(#{@location.location_name})の入金記録一覧へ", location_incomes_path, class: "button is-light is-info" %>
     <%= link_to "#{@location.location_name}の月グラフへ", monthly_expenses_location_expenses_path, class: "button is-light is-info"  %>
     <div class="graph-container">
-      <%= pie_chart @expenses.group(:expense_name).count %>
+      <%= pie_chart @expense_counts %>
     </div>
     <div class="expense-footer">
       <% if @location.max_expense.present? %>
