レスポンシブ対応のレイアウト修正,レイアウト修正に伴うrspecの修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,7 +44,10 @@ body {
   justify-content: space-between;
 }
 .navbar-left {
-  padding-left : 30px;
+  padding-left : 40px;
+}
+.navbar-right {
+  padding-left: 30px;
 }
 .navbar-item {
   color: white;
