--- a/app/assets/stylesheets/locations.scss
+++ b/app/assets/stylesheets/locations.scss
@@ -52,4 +52,7 @@ table td:not([align]), table th:not([align]) {
   i.fa.fa-plus-circle {
     font-size: 20px;
   }
+  .button .is-info {
+    margin-bottom: 20px;
+  }
 }
