--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -4,7 +4,8 @@
     <div class="expense-header">
       <h1>
         <% if @location.asset_name.present? %>
-          <%= "#{@location.asset_name}(#{@location.location_name})の出金記録一覧" %>
+          <%= "#{@location.asset_name}(#{@location.location_name})の" %>
+          <br>出金記録一覧
         <% else %>
           <%= "#{@location.location_name} 出金記録一覧" %>
         <% end %>
@@ -29,20 +30,27 @@
               <% end %>
             </td>
             <td><%= expense.expense_memo %></td>
-            <td>
+          </tr>
+          <tr>
+            <td colspan="2">
               <%= link_to edit_location_expense_path(@location, expense) do %>
-                編集
+                <i class="fas fa-pencil-alt">編集</i>
               <% end %>
             </td>
-            <td>
-              <%= link_to "削除", location_expense_path(@location, expense), method: :delete, data: {confirm: "この操作は取り消しできません。本当に削除しますか？"} %>
+            <td colspan="2">
+              <%= link_to location_expense_path(@location, expense), method: :delete, data: {confirm: "この操作は取り消しできません。
+                本当に削除しますか？"} do %>
+              <i class="fas fa-trash-alt">削除</i>
+              <% end %>
             </td>
           </tr>
         </tbody>
       </table>
     <% end %>
-    <%= link_to "#{@location.asset_name}(#{@location.location_name})の入金記録一覧へ", location_incomes_path, class: "button is-light is-info" %>
-    <%= link_to "#{@location.location_name}の月グラフへ", monthly_expenses_location_expenses_path, class: "button is-light is-info"  %>
+    <div class="button-container">
+      <%= link_to "#{@location.asset_name}(#{@location.location_name})の入金記録一覧へ", location_incomes_path, class: "button is-light is-info" %>
+      <%= link_to "#{@location.location_name}の月グラフへ", monthly_expenses_location_expenses_path, class: "button is-light is-info"  %>
+    </div>
     <div class="graph-container">
       <%= pie_chart @expense_counts %>
     </div>
