--- a/app/views/incomes/show.html.erb
+++ b/app/views/incomes/show.html.erb
@@ -1,30 +1,31 @@
 <% provide(:title, @income.income_name) %>
 <div class="incomes-form">
   <div class="container">
-    <table class="table is-fullwidth is-hoverable">
+    <table class="table">
       <tbody>
         <tr>
-          <td colspan="2">
+          <td colspan=>
             <%= render 'devise/shared/location_items', location_name: @location.location_name %>
           </td>
         </tr>
         <tr>
           <td><%= l @income.income_day, formats: :short %></td>
+        </tr>
+        <tr>
           <td><%= @income.income_name %></td>
         </tr>
         <tr>
-          <td colspan="2">
+          <td colspan=>
             <% if @income.income_money.present? %>
               <%= "#{@income.income_money.to_s(:delimited)}円" %>
             <% end %>
           </td>
         </tr>
         <tr>
-          <td colspan="2"><%= @income.income_memo %></td>
+          <td colspan=><%= @income.income_memo %></td>
         </tr>
         <tr>
           <td><%= l @income.created_at %></td>
-          <td></td>
         </tr>
         <tr>
           <td>
@@ -32,10 +33,13 @@
               編集
             <% end %>
           </td>
-          <td></td>
+          <td>
+          </td>
         </tr>
       </tbody>
     </table>
-    <%= link_to "戻る", :back, class: "button is-light" %>
+    <div class="back-button">
+      <%= link_to "戻る", :back, class: "button is-light" %>
+    </div>
   </div>
 </div>
