--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -25,28 +25,36 @@
           <tr>
             <td>
               <%= link_to new_location_income_path(location.id) do %>
-                <i class="fas fa-plus">入金</i>
+                <i class="fas fa-plus"></i>
               <% end %>
             </td>
             <td>
               <%= link_to new_location_expense_path(location.id) do %>
-                <i class="fa fa-minus">出金</i>
+                <i class="fa fa-minus"></i>
               <% end %>
             </td>
             <td>
               <%= link_to edit_location_path(location.id) do %>
-                <i class="fas fa-pencil-alt">編集</i>
+                <i class="fas fa-pencil-alt"></i>
               <% end %>
             </td>
             <td>
               <%= link_to location_path(location.id), method: :delete, data: {confirm: "資産情報を削除すると支出、収入に関わるデータも削除されます。
               本当に削除しますか？"} do %>
-                <i class="fas fa-trash-alt">削除</i>
+                <i class="fas fa-trash-alt"></i>
               <% end %>
             </td>
           </tr>
         </tbody>
       </table>
     <% end %>
+  </div>
+  <div class="page-description">
+    以下使い方の説明です! <br>
+    1.<i class="fas fa-plus"></i>マークを押すと入金の登録をすることができます。<br>
+    2.<i class="fa fa-minus"></i>マークを押すと出金の登録ができます。<br>
+    3.<i class="fas fa-pencil-alt"></i>マークを押すと登録した資産情報の編集ができます。<br>
+    4.<i class="fas fa-trash-alt"></i>マークを押すと登録した資産情報の削除ができます。<br>
+      ただし、削除したものを元に戻すことはできませんのでご注意ください!
   </div>
 </div>
