--- a/app/views/incomes/show.html.erb
+++ b/app/views/incomes/show.html.erb
@@ -4,7 +4,7 @@
     <table class="table">
       <tbody>
         <tr>
-          <td colspan=>
+          <td>
             <%= render 'devise/shared/location_items', location_name: @location.location_name %>
           </td>
         </tr>
@@ -15,14 +15,14 @@
           <td><%= @income.income_name %></td>
         </tr>
         <tr>
-          <td colspan=>
+          <td>
             <% if @income.income_money.present? %>
               <%= "#{@income.income_money.to_s(:delimited)}円" %>
             <% end %>
           </td>
         </tr>
         <tr>
-          <td colspan=><%= @income.income_memo %></td>
+          <td><%= @income.income_memo %></td>
         </tr>
         <tr>
           <td><%= l @income.created_at %></td>
